# CocoMind

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RUN_INSTRUCTIONS.txt  pyproject.toml  walkthrough.md.resolved
.github/workflows/: ci.yml
data/blacklist/: cvc_debarment.csv
data/ground_truth/: expected_verdicts.csv
data/synthetic/: bid_a_pass.json  bid_b_fail.json  bid_c_hitl.json  nit_sample.json
data/workflow/: workflow.db
docs/: Architectural Blueprint for National Business Regi....md  DOC 2.md  DOC1.md  DOC3.md  Hackathon Research Document Outline.md  IMPLEMENTATION_PLAN.md  National Framework for Business Registry Moderniza....md  ROADMAP.md  THREAT_MODEL.md  Theme.md
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/api/: routes.py
src/audit/: chain.py
src/checkers/: blacklist_checker.py  emd_validator.py  integrity_pact_checker.py  near_relations_checker.py
src/config/: settings.py  synonym_map.json
src/conflict/: resolver.py
src/engine/: rule_engine.py
src/extraction/: criterion_extractor.py  value_extractor.py
src/ingestion/: service.py
src/models/: audit.py  auth.py  criteria.py  documents.py  extraction.py  hitl.py  prompts.py  verdicts.py  workflow.py
src/observability/: logging.py
src/ocr/: azure_service.py
src/pipeline/: orchestrator.py
src/rbac/: middleware.py
src/redaction/: indian_recognizers.py  presidio_pipeline.py
src/retrieval/: bm25_index.py  chunker.py  embedder.py  hybrid_retriever.py
src/workflow/: __init__.py  fixtures.py  jobs.py  store.py
tests/api/: test_workflow_api.py
tests/e2e/: test_pipeline.py
tests/property/: test_rule_engine.py
tests/red_team/: test_prompt_injection.py
tests/unit/: test_audit_chain.py  test_conflict_resolver.py  test_indian_recognizers.py  test_rule_engine.py
ui-react/: build_error.txt  build_error_2.txt  build_error_utf8.txt  index.html  package-lock.json  package.json  tailwind.config.js
ui-react/src/: App.tsx  api.ts  index.css
ui-react/src/components/: Layout.tsx  Sidebar.tsx
ui-react/src/data/: mock.ts
ui-react/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Placeholders.tsx  TenderWorkspace.tsx
ui-streamlit/: Home.py  dashboard.py
ui-streamlit/pages/: 1_Dashboard.py  2_HITL_Review.py  3_RTI_Export.py  4_Audit_Chain.py
